# console-quiz

./: CMakeLists.txt  LICENSE  README.md  main.cpp  quiz_01.txt  quiz_02.txt  quiz_03.txt  quiz_04.txt  quiz_05.txt  quiz_list.txt  results_list.txt
